# SoundcardStrech

./: .gitignore  CMakeLists.txt  README.md  audio_recorder.cpp  audio_recorder.h  main_window.cpp  main_window.h  my_events.cpp  my_events.h  paex_record.cpp  play_button.cpp  play_button.h  playback.cpp  playback.h  record.cpp  record.h  record_button.cpp  record_button.h  sawtooth_playback.cpp  state.cpp  state.h  tool_install.bat  utils.cpp  utils.h  vcpkg.json  wave_panel.cpp  wave_panel.h  wx_test.cpp
doc/: INSTALL.md
